; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_packet_queue_put.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffplay.c_packet_queue_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@flush_pkt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*)* @packet_queue_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @packet_queue_put(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @SDL_LockMutex(i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @packet_queue_put_private(%struct.TYPE_4__* %10, i32* %11)
  store i32 %12, i32* %5, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @SDL_UnlockMutex(i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = icmp ne i32* %17, @flush_pkt
  br i1 %18, label %19, label %25

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @av_packet_unref(i32* %23)
  br label %25

25:                                               ; preds = %22, %19, %2
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @SDL_LockMutex(i32) #1

declare dso_local i32 @packet_queue_put_private(%struct.TYPE_4__*, i32*) #1

declare dso_local i32 @SDL_UnlockMutex(i32) #1

declare dso_local i32 @av_packet_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
